tests/snapshots/tui_split_hunks_select__split_hunks_select_first_highlighted_none_selected.snap
---
source: tests/tui_split_hunks_select.rs
expression: "harness.render(|frame|\n{ views::split_hunks_select::render(&mut app, frame); })"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "  ┌ Split Out Hunk(s) — context: 3 ──────────────────────────────────────────┐  ",
        "  │▸ [ ] a.txt -1,1        │a.txt:                                           │  ",
        "  │  [ ] a.txt -10,1       │                                                 │  ",
        "  │  [ ] b.txt -1,1        │@@ -1,1 +1,1 @@                                  │  ",
        "  │                        │-a-old-1                                         │  ",
        "  │                        │+a-new-1                                         │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │                        │                                                 │  ",
        "  │     ↑/↓ Move   Space Toggle   +/- Context   Enter Split   Esc Cancel     │  ",
        "  └──────────────────────────────────────────────────────────────────────────┘  ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 19, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 20, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 4, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 19, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 5, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 6, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 36, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 7, fg: Green, bg: Black, underline: Reset, modifier: NONE,
        x: 36, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 8, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 11, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 8, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 12, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 19, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 34, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 48, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 54, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 62, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 66, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
