tests/snapshots/tui_split_hunks_select__split_hunks_select_scrollbars_visible.snap
---
source: tests/tui_split_hunks_select.rs
expression: "harness.render(|frame|\n{ views::split_hunks_select::render(&mut app, frame); })"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "  ┌ Split Out Hunk(s) — context: 3 ──────────────────────────────────────────┐  ",
        "  │▸ [ ] file0.txt -1,1   █│file0.txt:                                       │  ",
        "  │  [ ] file1.txt -21,1  █│                                                 │  ",
        "  │  [ ] file2.txt -41,1  █│@@ -1,1 +1,1 @@                                  │  ",
        "  │  [ ] file3.txt -61,1  █│-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx │  ",
        "  │  [ ] file4.txt -81,1  █│+yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy │  ",
        "  │  [ ] file5.txt -101,1 █│                                                 │  ",
        "  │  [ ] file6.txt -121,1 █│                                                 │  ",
        "  │  [ ] file7.txt -141,1 █│                                                 │  ",
        "  │  [ ] file8.txt -161,1 █│                                                 │  ",
        "  │  [ ] file9.txt -181,1 ││                                                 │  ",
        "  │  [ ] file10.txt -201,1││                                                 │  ",
        "  │  [ ] file11.txt -221,1││                                                 │  ",
        "  │  [ ] file12.txt -241,1││                                                 │  ",
        "  │  [ ] file13.txt -261,1││                                                 │  ",
        "  │  [ ] file14.txt -281,1││                                                 │  ",
        "  │  [ ] file15.txt -301,1││████████████─────────────────────────────────────│  ",
        "  │                   ↑/↓ Move   Space Toggle   +/- Context                  │  ",
        "  │              ←/→ Ctrl-↑/↓ Scroll   Enter Split   Esc Cancel              │  ",
        "  └──────────────────────────────────────────────────────────────────────────┘  ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: BOLD,
        x: 23, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 3, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 3, fg: Yellow, bg: Black, underline: Reset, modifier: NONE,
        x: 38, y: 3, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 3, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 24, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 4, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 4, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 4, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 5, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 24, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 5, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 43, y: 5, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 5, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 6, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 24, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 6, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Red, bg: Black, underline: Reset, modifier: NONE,
        x: 76, y: 6, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 6, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 7, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 24, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 7, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 7, fg: Green, bg: Black, underline: Reset, modifier: NONE,
        x: 76, y: 7, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 7, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 8, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 25, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 8, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 8, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 25, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 9, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 9, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 9, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 25, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 10, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 10, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 10, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 11, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 25, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 11, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 11, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 12, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 25, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 12, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 12, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 26, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 13, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 13, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 14, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 26, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 14, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 15, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 26, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 15, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 16, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 26, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 16, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 16, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 17, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 26, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 17, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 17, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 18, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 26, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: White, bg: Black, underline: Reset, modifier: NONE,
        x: 28, y: 18, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 18, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 22, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 26, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 33, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 39, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 48, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 52, y: 19, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 19, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 3, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 17, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 30, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 39, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 45, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 53, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 57, y: 20, fg: Reset, bg: Black, underline: Reset, modifier: NONE,
        x: 77, y: 20, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Cyan, bg: Black, underline: Reset, modifier: NONE,
        x: 78, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
